<resources>
    <string name="app_name">Restore the word</string>
    <string name="start_game">Start game!!!</string>
    <string name="footer">Created by Oleksii Maksymov for the second lab</string>
    <string name="settings">Settings</string>
    <string name="level">Level:</string>
    <string name="beginner_4_or_5_or_6_word_length">Beginner (4 or 5 or 6 word length)</string>
    <string name="veteran_4_or_5_or_6_word_length">Veteran (7 or 8 or 9 word length)</string>
    <string name="hint_for_beginner">(4, 5, 6) word length</string>
    <string name="hint_for_veteran">(7, 8, 9) word length</string>
    <string name="timer">Timer</string>
    <string name="one_min">One minute</string>
    <string name="two_min">Two minutes</string>
    <string name="three_min">Three minutes</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seconds"> SECONDS</string>
    <string name="guessed_words">" GUESSED WORDS"</string>
</resources>
